--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm run test
     - name: Dancehall Test
-    - if: success()
+      if: success()
       run: |
         curl -X POST https://maker.ifttt.com/trigger/turn_off_light/with/key/dCyKOr1khnjkNv5ZLKXAqz
         curl -X POST https://maker.ifttt.com/trigger/turn_off_mirror_ball/with/key/dCyKOr1khnjkNv5ZLKXAqz
