--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,19 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-      run: npm run test
-      if: success()
-      run: |
-        curl -X POST https://maker.ifttt.com/trigger/turn_off_light/with/key/dCyKOr1khnjkNv5ZLKXAqz
-        curl -X POST https://maker.ifttt.com/trigger/turn_off_mirror_ball/with/key/dCyKOr1khnjkNv5ZLKXAqz
-        curl -i -X PUT -H "Content-Type:application/json" -H "Authorization:Bearer BQDDDterSaWThOH0gae8pIC6T8fiCV05R7FVZqtHKMtOErJS4L83_7cJsasI9N8LEZ1bbBRbepKLUrkeKlV30Y11PBZF_PrCQDmn51yQVwS7fDU3lJLRA2hpOiHXhI-VBdSxeLbQ4xa7rYWjt9sjdX7YOqbyB92hg4Pb8khcXBzotII" -d '{"uris": ["spotify:track:6dlCQNTl06VUQptct6liKr"]}' 'https://api.spotify.com/v1/me/player/play?device_id=747e7ecbf7685b0913ec76af98e0016f4e2cc9fb'
+      - uses: actions/checkout@v1
+      - name: Setup NodeJs
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - name: Install Dependencies
+        run: npm install
+      - name: Run test
+        run: npm test
