--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Setup NodeJs
+      - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
@@ -23,3 +23,9 @@ jobs:
         run: npm install
       - name: Run test
         run: npm test
+      - name: Turn on mirror ball
+        if: success()
+        run: |
+          curl -X POST https://maker.ifttt.com/trigger/turn_off_light/with/key/dCyKOr1khnjkNv5ZLKXAqz
+          curl -X POST https://maker.ifttt.com/trigger/turn_on_mirror_ball/with/key/dCyKOr1khnjkNv5ZLKXAqz
+          curl -i -X PUT -H "Content-Type:application/json" -H "Authorization:Bearer BQALzBodKZq04TmouXT305-6Bwj2DutxY4PlfSY7zDzqdkQjMg9oXeNJWCO0lN4E7YnCLbjuwz--du8t_f7RB6hDSe3XbVR-aMi4u2uanNdBbrSvlYSB6NYWPbq8w57mDk28RD8PS8zDsZqqocaYxT6pZUkwzjrHbvzdyDBvO96oz7w" -d '{"uris": ["spotify:track:6dlCQNTl06VUQptct6liKr"]}' 'https://api.spotify.com/v1/me/player/play?device_id=747e7ecbf7685b0913ec76af98e0016f4e2cc9fb'
