--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,9 +25,12 @@ jobs:
         run: npm test
       - name: Turn on mirror ball
         if: success()
+        shell: bash
+        env:
+          IFTTT_KEY: ${{ secrets.IftttKey }}
+          SPOTIFY_ACCESS_TOKEN: ${{ secrets.SpotifyAccessToken }}
+          SPOTIFY_DEVICE_ID: ${{ secrets.SpotifyDeviceId }}
         run: |
-          curl -X POST https://maker.ifttt.com/trigger/turn_off_light/with/key/dCyKOr1khnjkNv5ZLKXAqz
-          sleep 1.5
-          curl -X POST https://maker.ifttt.com/trigger/turn_on_mirror_ball/with/key/dCyKOr1khnjkNv5ZLKXAqz
-          sleep 3.2
-          curl -i -X PUT -H "Content-Type:application/json" -H "Authorization:Bearer BQALzBodKZq04TmouXT305-6Bwj2DutxY4PlfSY7zDzqdkQjMg9oXeNJWCO0lN4E7YnCLbjuwz--du8t_f7RB6hDSe3XbVR-aMi4u2uanNdBbrSvlYSB6NYWPbq8w57mDk28RD8PS8zDsZqqocaYxT6pZUkwzjrHbvzdyDBvO96oz7w" -d '{"uris": ["spotify:track:6dlCQNTl06VUQptct6liKr"]}' 'https://api.spotify.com/v1/me/player/play?device_id=aec84f7f2814b0bb1dac33ac33e30e570fd91984'
+          curl -X POST https://maker.ifttt.com/trigger/turn_off_light/with/key/$IFTTT_KEY
+          curl -X POST https://maker.ifttt.com/trigger/turn_on_mirror_ball/with/key/$IFTTT_KEY
+          curl -i -X PUT -H "Content-Type:application/json" -H "Authorization:Bearer $SPOTIFY_ACCESS_TOKEN" -d '{"uris": ["spotify:track:6dlCQNTl06VUQptct6liKr"]}' 'https://api.spotify.com/v1/me/player/play?device_id=$SPOTIFY_DEVICE_ID'
